[project]
name = "expense_tracker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noshin Faria", email = "noshinfariaprova@gmail.com"},
]
dependencies = [
    "Flask-Bcrypt>=1.0.1",
    "flask-jwt-extended>=4.6.0",
    "Flask-SQLAlchemy>=3.1.1",
    "flask-admin>=1.6.1",
    "Flask-Mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "APscheduler>=3.11.0",
    "flask>=3.0.3",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


